Fixing up the spacing and the headers.

--- a/style/master.less
+++ b/style/master.less
@@ -48,8 +48,8 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
 	font-family: 'Montez', cursive;
-	margin: .35em 0 .15em 0;
-	text-shadow: 2px 2px 2px @colorBackground;
+	margin: 0 0 0 0;
+	text-shadow: 1px 1px 2px @colorTertiary;
 }
 
 h1 {
@@ -140,7 +140,7 @@ dl {
 
 .outer_container {
 	background: url(img/bottom.png) center bottom no-repeat;
-	padding: 1.5em 0 42em 0;
+	padding-bottom: 42em;
 }
 
 .loan,
